DONE FOR THE DAY3/12/21

--- a/jackspracticeblog.html
+++ b/jackspracticeblog.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<!--TEST OF GIT COMMIT MESSAGING-->
-
-
 <div> <meta BASIC CSS STYLE>
     
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
@@ -25,7 +22,7 @@
 
         .smaller-image{width:300px}
 
-        .thin-purple-border { border-color: rgb(80, 7, 95); border-width: 100px; border-style: solid;}
+        .thin-purple-border {border-color: rgb(80, 7, 95); border-width: 10px; border-style: solid; padding: 10px;}
 
         .rounded {border-radius: 100%;}
 
@@ -36,10 +33,14 @@
         .backgroundB {background-color: blue;}
         .backgroundP {background-color: purple;}
         .backgroundT {background-color: yellow;}
+        .box {text-align: center;}
+        .center { margin-left: 10%; margin-right: auto;}
 
         #pinkBack {background-color: thistle;}
         #tealBack {background-color: teal;}
         #Other {background-color: wheat;}
+
+        .spacebetween {padding:50px;}
 
     </style>
     
@@ -50,13 +51,14 @@
 <head>
 
     <meta Learning To Code>
-    <title>HEAD ELEMENTS</title>
+    <title>JACK'S FIRST WEBSITE</title>
 
 </head>
 
 <body 
 
-class="thin-purple-border">
+class="thin-purple-border spacebetween">
+
 
 <!--YOU NEED BETTER BODY ORGANIZATION-->
 
@@ -68,15 +70,18 @@ class="thin-purple-border">
 <a href="#footer">CLICK THIS to go to the bottom of the page</a> 
 </header>
 
-    <p style="color:red;"> It took so long to get this photo here.</p>
+    <p style="color:red;"> It took me a while to learn how to align these photos here.</p>
 
-    <a href="jackando.com" target="_blank"><img class="smaller-image rounded" src = "TestPhoto.jpg" alt "PhotoBoothJack"> </a>
+    <img class="smaller-image rounded" src = "TestPhoto.jpg" alt "PhotoBoothJack">
+    <a href="jackando.com" target="_blank"></a><img class="smaller-image rounded center" src="PhotoTest2.jpg" alt "PhotoBoothJack2"></a>
+    <img class="smaller-image rounded center" src="Photo3.jpg" alt "PhotoBoothJack3">
 
-    <p style="color:red"> (Photo Booth Photo from 3/11/21) </p>
+
+    <p style="color:red"> (Photo Booth Photos from 3/11/21-3/12/21) </p>
 <h2>Coding is CHALLENGING</h2>
     <p>I'm following TOP and FreeCodeCamp. I'm using VSCode with the Live Server extension to practice my skills. Eventually I will <a href="https://sive.rs">create the code for my personal blog</a>.</p>
     <p>Here is a <a _blank href="https://www.grantando.com" target="_blank">link to my brothers website.</a></p>
-<h3 class="background">IS H3 Smaller?</h3>
+<h3 class="background box">H3 Center Alignment</h3>
 <h4>What about H4?</h4>
 <h5 class="pink-text"> H5 HEADER SIZE !!!! </h5>
 <h6>H6 IS SO SMALL</h6>
@@ -132,9 +137,9 @@ class="thin-purple-border">
 <H3>  Qualities You Wish You Had</H3>
 
 <label>
-    <input type="checkbox">persistence
-    <input type="checkbox">integrity
-    <input type="checkbox">bravery
+    <input type="checkbox">Persistence
+    <input type="checkbox">Integrity
+    <input type="checkbox">Bravery
 </label>
 
 </div>
@@ -150,11 +155,29 @@ class="thin-purple-border">
 </h1>
 
 <p>
-I don't yet know how to change each letter in a Header without it arranging in a top-down order format. 
-<p class="pink-text"> blah blah blah blah
+I don't yet know how to change each letter in a Header without it arranging in a top-down order format. There is so much to learn, I'm so excited! 
+<p class="pink-text"> blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
 </p>
 
 <footer id="footer" The bottom of the page.> </footer>
+
+<!-- ADD YOUTUBE VIDEOS
+
+<iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" #
+        allowfullscreen="allowfullscreen"
+        mozallowfullscreen="mozallowfullscreen" 
+        msallowfullscreen="msallowfullscreen" 
+        oallowfullscreen="oallowfullscreen" 
+        webkitallowfullscreen="webkitallowfullscreen"> 
+
+another option for YouTube Player ...
+
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
+
+-->
+</iframe>
 
 </body>
 
